# python-angular

./: .gitignore
backend/fastapi/rest/project-01/: install_and_run_dev.sh  pyproject.toml
backend/fastapi/rest/project-01/src/: main.py  runner.py
backend/fastapi/rest/project-01/src/database/: __init__.py  posts_store.py
backend/fastapi/rest/project-01/src/validation/: __init__.py  constants.py  schemas.py  validators.py
backend/fastapi/rest/project-01/tests/: main_test.py  test_common.py  test_delete.py  test_get.py  test_patch.py  test_post.py  test_put.py
backend/fastapi/rest/project-03/: .coveragerc
backend/python/project-00/src/: __init__.py
backend/python/project-00/tests/: list_method_add_list_items.py  list_method_test_basics.py  str_method_test.py  str_method_test_from_capitalize_to_istitle.py  str_method_test_from_istitle_to_.py  str_upper_tests.py
frontend/: .gitignore
frontend/project-00/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/project-00/src/: index.html  styles.scss
frontend/project-01/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
frontend/project-02/: README.md  package-lock.json  package.json  tsconfig.base.json
frontend/project-03/: .env-template  .gitignore  README.md  nx.json  package-lock.json  package.json
frontend/project-03/docs/: 01-product-brief.md  02-iteration-instructions.md  03-task-board.md  04-daily-work-log.md  05-commit-convention.md  06-data-architecture.md  README.md
frontend/project-03/tools/: isolated-dev-proxy.cjs
(+203 files in other folders)
