[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-01-api"
version = "1.0.0"
description = "FastAPI sample project with simple dev/prod scripts"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "pydantic>=2.12.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
]
prod = [
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.scripts]
project01-dev = "runner:dev"
project01-prod = "runner:prod"
project01-test = "runner:test"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "runner"]

[tool.setuptools.packages.find]
where = ["src"]
